Moved my files into folders and I'm in the process of moving data to external drive

--- a/echorne/nsynth.ipynb
+++ b/echorne/nsynth.ipynb
@@ -8,6 +8,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Jesse Engel, Cinjon Resnick, Adam Roberts, Sander Dieleman, Douglas Eck,\n",
+    "  Karen Simonyan, and Mohammad Norouzi. \"Neural Audio Synthesis of Musical Notes\n",
+    "  with WaveNet Autoencoders.\" 2017."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
