Update Initial data exploration (AP).ipynb

--- a/Initial data exploration (AP).ipynb
+++ b/Initial data exploration (AP).ipynb
@@ -554,6 +554,54 @@
   },
   {
    "cell_type": "markdown",
+   "id": "minor-recording",
+   "metadata": {},
+   "source": [
+    "## update 2/7- running a few things from echorne_draft"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "threatened-member",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from os import walk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "available-cruise",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "acousticGuitars = []\n",
+    "musicFolder = '../../music-data/'\n",
+    "testFolder = 'nsynth-valid/audio/'\n",
+    "for root, dirs, files in walk(musicFolder+testFolder):\n",
+    "    for file in files:\n",
+    "        if file.startswith('guitar_acoustic') and file.endswith('.wav'):\n",
+    "            acousticGuitars.append(file)\n",
+    "    break\n",
+    "acousticGuitars[:20]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cardiac-provider",
    "metadata": {},
    "source": [
     "# Misc useful links & other tricks\n",
