started messing with nsynth

--- a/apalermo/Valerio Velardo - The Sound of AI notes (AP).ipynb
+++ b/apalermo/Valerio Velardo - The Sound of AI notes (AP).ipynb
@@ -902,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ongoing-person",
    "metadata": {},
    "outputs": [],
@@ -982,6 +982,14 @@
     "    with open(json_path, \"w\") as fp: \n",
     "        json.dump(data, fp, indent=4)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "parliamentary-denver",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1987,9 +1995,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "music_analysis",
    "language": "python",
-   "name": "python3"
+   "name": "music_analysis"
   },
   "language_info": {
    "codemirror_mode": {
