--- a/Sandbox/apalermo/Valerio Velardo - The Sound of AI notes (AP).ipynb
+++ b/Sandbox/apalermo/Valerio Velardo - The Sound of AI notes (AP).ipynb
@@ -871,25 +871,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "fewer-north",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from kaggle.api.kaggle_api_extended import KaggleApi\n",
-    "# import os\n",
-    "# from zipfile import ZipFile\n",
-    "# api = KaggleApi()\n",
-    "# api.authenticate()\n",
+    "from kaggle.api.kaggle_api_extended import KaggleApi\n",
+    "import os\n",
+    "from zipfile import ZipFile\n",
+    "api = KaggleApi()\n",
+    "api.authenticate()\n",
     "\n",
-    "# # delete the folder if it already exists\n",
-    "# if os.path.exists('genre_classification_dataset'): \n",
-    "#     shutil.rmtree('genre_classification_dataset')\n",
+    "# delete the folder if it already exists\n",
+    "if os.path.exists('genre_classification_dataset'): \n",
+    "    shutil.rmtree('genre_classification_dataset')\n",
     "    \n",
-    "# api.dataset_download_files(\"andradaolteanu/gtzan-dataset-music-genre-classification\")\n",
-    "# zf = ZipFile('gtzan-dataset-music-genre-classification.zip')\n",
-    "# zf.extractall('genre_classification_dataset\\\\')\n",
-    "# zf.close()"
+    "api.dataset_download_files(\"andradaolteanu/gtzan-dataset-music-genre-classification\")\n",
+    "zf = ZipFile('gtzan-dataset-music-genre-classification.zip')\n",
+    "zf.extractall('genre_classification_dataset\\\\')\n",
+    "zf.close()"
    ]
   },
   {
@@ -902,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "ongoing-person",
    "metadata": {},
    "outputs": [],
@@ -985,15 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "parliamentary-denver",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "agricultural-malpractice",
    "metadata": {
     "scrolled": true
@@ -1001,7 +993,7 @@
    "outputs": [],
    "source": [
     "# # keep this commented as it takes a while to run\n",
-    "# save_mfcc(dataset_path=DATASET_PATH, json_path=JSON_PATH, num_segments=10)"
+    "save_mfcc(dataset_path=DATASET_PATH, json_path=JSON_PATH, num_segments=10)"
    ]
   },
   {
@@ -1016,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "animated-wrong",
    "metadata": {},
    "outputs": [],
@@ -1040,10 +1032,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "impaired-thursday",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "With n_samples=0, test_size=0.3 and train_size=None, the resulting train set will be empty. Adjust any of the aforementioned parameters.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-b3928a0d9057>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m# split into train and test set\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0minputs_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minputs_test\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtargets_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtargets_test\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtargets\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtest_size\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0.3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;31m# build the network architecture\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\envs\\music_analysis\\lib\\site-packages\\sklearn\\model_selection\\_split.py\u001b[0m in \u001b[0;36mtrain_test_split\u001b[1;34m(test_size, train_size, random_state, shuffle, stratify, *arrays)\u001b[0m\n\u001b[0;32m   2173\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2174\u001b[0m     \u001b[0mn_samples\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_num_samples\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marrays\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2175\u001b[1;33m     n_train, n_test = _validate_shuffle_split(n_samples, test_size, train_size,\n\u001b[0m\u001b[0;32m   2176\u001b[0m                                               default_test_size=0.25)\n\u001b[0;32m   2177\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\envs\\music_analysis\\lib\\site-packages\\sklearn\\model_selection\\_split.py\u001b[0m in \u001b[0;36m_validate_shuffle_split\u001b[1;34m(n_samples, test_size, train_size, default_test_size)\u001b[0m\n\u001b[0;32m   1855\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1856\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mn_train\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1857\u001b[1;33m         raise ValueError(\n\u001b[0m\u001b[0;32m   1858\u001b[0m             \u001b[1;34m'With n_samples={}, test_size={} and train_size={}, the '\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1859\u001b[0m             \u001b[1;34m'resulting train set will be empty. Adjust any of the '\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: With n_samples=0, test_size=0.3 and train_size=None, the resulting train set will be empty. Adjust any of the aforementioned parameters."
+     ]
+    }
+   ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "import tensorflow.keras as keras\n",
