--- a/Sandbox/echorne/nsynth.ipynb
+++ b/Sandbox/echorne/nsynth.ipynb
@@ -844,9 +844,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "music_analysis",
    "language": "python",
-   "name": "python3"
+   "name": "music_analysis"
   },
   "language_info": {
    "codemirror_mode": {
@@ -858,7 +858,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
